--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
         <h1 class="title">FAQ</h1>
         <details class="details-sections">
           <summary class="questions">
-            How many team members can I invite?
+            How many team members can I invite?<img
+              class="arrow"
+              src="images/icon-arrow-down.svg"
+              alt=""
+            />
           </summary>
           <p class="solutions">
             You can invite up to 2 additional users on the Free plan. There is
@@ -42,9 +46,13 @@
           </p>
         </details>
         <hr />
-        <details>
+        <details class="details-sections">
           <summary class="questions">
-            What is the maximum file upload size?
+            What is the maximum file upload size?<img
+              class="arrow"
+              src="images/icon-arrow-down.svg"
+              alt=""
+            />
           </summary>
           <p class="solutions">
             No more than 2GB. All files in your account must fit your allotted
@@ -53,8 +61,14 @@
         </details>
         <hr />
 
-        <details>
-          <summary class="questions">How do I reset my password?</summary>
+        <details class="details-sections">
+          <summary class="questions">
+            How do I reset my password?<img
+              class="arrow"
+              src="images/icon-arrow-down.svg"
+              alt=""
+            />
+          </summary>
           <p class="solutions">
             Click “Forgot password” from the login page or “Change password”
             from your profile page. A reset link will be emailed to you.
@@ -62,8 +76,14 @@
         </details>
         <hr />
 
-        <details>
-          <summary class="questions">Can I cancel my subscription?</summary>
+        <details class="details-sections">
+          <summary class="questions">
+            Can I cancel my subscription?<img
+              class="arrow"
+              src="images/icon-arrow-down.svg"
+              alt=""
+            />
+          </summary>
           <p class="solutions">
             Yes! Send us a message and we’ll process your request no questions
             asked.
@@ -71,9 +91,13 @@
         </details>
         <hr />
 
-        <details>
+        <details class="details-sections">
           <summary class="questions">
-            Do you provide additional support?
+            Do you provide additional support?<img
+              class="arrow"
+              src="images/icon-arrow-down.svg"
+              alt=""
+            />
           </summary>
           <p class="solutions">
             Chat and email support is available 24/7. Phone lines are open
@@ -91,7 +115,5 @@
         >. Coded by <a href="#">Lourdes Infante</a>.
       </div>
     </footer>
-
-    <script src="app.js"></script>
   </body>
 </html>
