--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
           src="/images/illustration-woman-online-mobile.svg"
           alt="illustration woman online"
         />
+        <div class="background"></div>
       </div>
-      <div class="background"></div>
       <div class="faq-section">
         <h1 class="title">FAQ</h1>
         <details class="details-sections">
@@ -45,7 +45,7 @@
             no limit on team members for the Premium plan.
           </p>
         </details>
-        <hr />
+        <hr class="line" />
         <details class="details-sections">
           <summary class="questions">
             What is the maximum file upload size?<img
@@ -59,7 +59,7 @@
             storage space.
           </p>
         </details>
-        <hr />
+        <hr class="line" />
 
         <details class="details-sections">
           <summary class="questions">
@@ -74,7 +74,7 @@
             from your profile page. A reset link will be emailed to you.
           </p>
         </details>
-        <hr />
+        <hr class="line" />
 
         <details class="details-sections">
           <summary class="questions">
@@ -89,7 +89,7 @@
             asked.
           </p>
         </details>
-        <hr />
+        <hr class="line" />
 
         <details class="details-sections">
           <summary class="questions">
